--- a/src/custom-components/account/account.html
+++ b/src/custom-components/account/account.html
@@ -16,7 +16,7 @@
     </div>
     <ion-list>
       <ion-card class="csProfileCardDetails" *ngFor="let detail of moreDetails ">
-        <ion-item class="csPlainGray">
+        <ion-item>
           <ion-avatar item-left>
             <ion-icon class="csProfileIcon" [name]="detail.icon"></ion-icon>
           </ion-avatar>
