--- a/src/pages/student-app/assignment/current/current.html
+++ b/src/pages/student-app/assignment/current/current.html
@@ -12,7 +12,10 @@
     <ion-list>
         <ion-card *ngFor="let assign  of assignmentList">
             <ion-item text-wrap>
-                <h2>{{assign.moduleName}}</h2>
+                <ion-label>
+                        {{assign.moduleName}}
+                </ion-label>
+                    
                 <p>{{assign.description}}</p>
                 <p>
                     <b>Year:</b> {{assign.yearName}}</p>
