--- a/src/pages/management-app/assessment/summative/summative.html
+++ b/src/pages/management-app/assessment/summative/summative.html
@@ -1,41 +1,50 @@
 <ion-header>
-    <nl-navbar [title]="title"></nl-navbar>
+  <nl-navbar [title]="title"></nl-navbar>
 </ion-header>
 
-<ion-content >
-    <ion-refresher (ionRefresh)="doRefresh($event)">
-        <ion-refresher-content></ion-refresher-content>
-    </ion-refresher>
-    <ion-list>
-        <button ion-item *ngFor="let assess of assessmentList" (click)="openSingleAssessment(assess.id)">
-            <h4>
-                <b>Title: </b>{{assess.title}}</h4>
-            <p>Year: {{assess.yearName}}</p>
-            <p>Module: {{assess.moduleName}}</p>
-            <p>Student: {{assess.studentName}}</p>
-        </button>
-    </ion-list>
+<ion-content>
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
 
-    <ion-list class="no-comment" *ngIf="assessmentList?.length==0">
-        <ion-icon name="list-box"></ion-icon>
-        <br>NO RECORD FOUND
-    </ion-list>
+  <ion-item *ngFor="let assess of assessmentList" (click)="openSingleAssessment(assess.id)">
+    <h2>
+      <b>{{assess.studentName}}</b>
+    </h2>
+    <h3>{{assess.title}}</h3>
+    <ion-row>
+      <ion-col col-6 no-padding>
+        <ion-icon name="school"></ion-icon>
+        <span>{{assess.yearName}} Year</span>
+      </ion-col>
+      <ion-col col-6 no-padding text-wrap>
+        <ion-icon name="clock"></ion-icon>
+        <span>{{assess.moduleName}}</span>
+      </ion-col>
+    </ion-row>
+  </ion-item>
+  <!-- <no-results *ngIf="isEmptyList"></no-results> -->
 
-    <ion-fab #fab right bottom>
-        <button ion-fab color="danger">
-            <ion-icon name="add"></ion-icon>
-        </button>
-        <ion-fab-list side="top">
-            <button ion-fab (click)="onFormativeBtn() ">
-                F
-            </button>
-            <button ion-fab (click)="onSummativeBtn() ">
-                S
-            </button>
-        </ion-fab-list>
-    </ion-fab>
+  <ion-list class="no-comment" *ngIf="assessmentList?.length==0">
+    <ion-icon name="list-box"></ion-icon>
+    <br>NO RECORD FOUND
+  </ion-list>
 
-    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
-        <ion-infinite-scroll-content></ion-infinite-scroll-content>
-    </ion-infinite-scroll>
+  <ion-fab #fab right bottom>
+    <button ion-fab color="primary">
+      <ion-icon name="add"></ion-icon>
+    </button>
+    <ion-fab-list side="top">
+      <button ion-fab (click)="onFormativeBtn() ">
+        F
+      </button>
+      <button ion-fab (click)="onSummativeBtn() ">
+        S
+      </button>
+    </ion-fab-list>
+  </ion-fab>
+
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
